--- a/Swooshly/Base.lproj/Main.storyboard
+++ b/Swooshly/Base.lproj/Main.storyboard
@@ -1,24 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Heavy</string>
+            <string>Avenir-Medium</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Swooshly" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="qGt-zH-MqF">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="ZIF-lF-PBA">
+                                <rect key="frame" x="128" y="40" width="119" height="20"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bbY-W4-SHX">
+                                <rect key="frame" x="52.5" y="129" width="270" height="71.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="270" id="xph-1u-wwz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="52"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find a team in your city &amp; dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wzj-91-e1b">
+                                <rect key="frame" x="52.5" y="253" width="270" height="46.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HD2-qh-1a0" customClass="BorderButton" customModule="Swooshly" customModuleProvider="target">
+                                <rect key="frame" x="16" y="597" width="343" height="50"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40103274828767121" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="K66-mX-ID9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <state key="normal" title="GET STARTED">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vd7-PX-jhD">
+                                <rect key="frame" x="52.5" y="201" width="270" height="37"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="27"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HD2-qh-1a0" secondAttribute="bottom" constant="20" id="0iU-NE-x6S"/>
+                            <constraint firstItem="vd7-PX-jhD" firstAttribute="top" secondItem="bbY-W4-SHX" secondAttribute="bottom" id="7IS-yz-KBw"/>
+                            <constraint firstItem="Wzj-91-e1b" firstAttribute="top" secondItem="vd7-PX-jhD" secondAttribute="bottom" constant="15" id="AXY-4c-xIn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HD2-qh-1a0" secondAttribute="trailing" constant="16" id="HgQ-Gi-Cvo"/>
+                            <constraint firstItem="ZIF-lF-PBA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Hi4-fX-pgY"/>
+                            <constraint firstItem="vd7-PX-jhD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HsG-4P-T2L"/>
+                            <constraint firstItem="qGt-zH-MqF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="HvC-wj-fp9"/>
+                            <constraint firstItem="bbY-W4-SHX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NTg-m4-jot"/>
+                            <constraint firstItem="bbY-W4-SHX" firstAttribute="top" secondItem="ZIF-lF-PBA" secondAttribute="bottom" constant="69" id="NxS-Gc-vfC"/>
+                            <constraint firstItem="qGt-zH-MqF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Stp-Kd-eW6"/>
+                            <constraint firstItem="ZIF-lF-PBA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Xzz-Jv-it6"/>
+                            <constraint firstItem="HD2-qh-1a0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ZIs-Hi-vsk"/>
+                            <constraint firstItem="Wzj-91-e1b" firstAttribute="width" secondItem="vd7-PX-jhD" secondAttribute="width" id="pGX-Es-M2Q"/>
+                            <constraint firstItem="qGt-zH-MqF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="rHX-G8-kQU"/>
+                            <constraint firstItem="qGt-zH-MqF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wsm-7u-t1B"/>
+                            <constraint firstItem="Wzj-91-e1b" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yXj-nm-gnJ"/>
+                            <constraint firstItem="vd7-PX-jhD" firstAttribute="width" secondItem="bbY-W4-SHX" secondAttribute="width" id="ycs-E7-coa"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="bgImg" destination="qGt-zH-MqF" id="ecY-xC-6SU"/>
+                        <outlet property="swoosh" destination="ZIF-lF-PBA" id="96b-Be-6af"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="swooshLogo" width="119" height="20"/>
+        <image name="welcomeScreenBG" width="414" height="736"/>
+    </resources>
 </document>
